--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>📝 My Tasks</h1>
+    <h1>📝 My tasks</h1>
     <form id="task-form">
       <input type="text" id="task-input" placeholder="Add a new task..." required />
       <button type="submit">➕ Add</button>
