--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
   <div class="container">
     <h1>📝 My tasks</h1>
+    <p id="error-message" style="color: red; display: none;">Please enter a task.</p>
     <form id="task-form">
       <input type="text" id="task-input" placeholder="Add a new task..." required />
       <button type="submit">➕ Add</button>
