--- a/index.html
+++ b/index.html
@@ -1,24 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Telegram To-Do</title>
-  <link rel="stylesheet" href="style.css" />
-  <!-- Telegram WebApp SDK -->
-  <script src="https://telegram.org/js/telegram-webapp.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>To-Do List</title>
+  <link rel="stylesheet" href="styles.css">
+  <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
 <body>
   <div class="container">
-    <h1>📝 My tasks</h1>
-    <p id="error-message" style="color: red; display: none;">Please enter a task.</p>
-    <form id="task-form">
-      <input type="text" id="task-input" placeholder="Add a new task..." required />
-      <button type="submit">➕ Add</button>
-    </form>
-    <ul id="task-list"></ul>
+    <h1>To-Do List</h1>
+    <div class="input-section">
+      <input type="text" id="taskInput" placeholder="Enter a task">
+      <button onclick="addTask()">Add Task</button>
+    </div>
+    <ul id="taskList"></ul>
+    <button class="close-btn" onclick="Telegram.WebApp.close()">Close</button>
   </div>
-
-  <script src="app.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
