--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
     <ul id="taskList"></ul>
     <button class="close-btn" onclick="Telegram.WebApp.close()">Close</button>
   </div>
-  <script src="script.js"></script>
+  <script src="app.js"></script>
 </body>
 </html>
