--- a/index.html
+++ b/index.html
@@ -9,14 +9,20 @@
 </head>
 <body>
   <div class="container">
-    <h1>To-Do List</h1>
-    <div class="input-section">
-      <input type="text" id="taskInput" placeholder="Enter a task">
-      <button onclick="addTask()">Add Task</button>
-    </div>
-    <ul id="taskList"></ul>
-    <button class="close-btn" onclick="Telegram.WebApp.close()">Close</button>
+    <header class="header">
+      <h1>To-Do List</h1>
+    </header>
+    <main class="main-content">
+      <div class="input-section">
+        <input type="text" id="taskInput" placeholder="Add a new task..." autocomplete="off">
+        <button onclick="addTask()">Add</button>
+      </div>
+      <ul id="taskList" class="task-list"></ul>
+    </main>
+    <footer class="footer">
+      <button class="close-btn" onclick="Telegram.WebApp.close()">Close</button>
+    </footer>
   </div>
-  <script src="app.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
