--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
       <button class="close-btn" onclick="Telegram.WebApp.close()">Close</button>
     </footer>
   </div>
-  <script src="script.js"></script>
+  <script src="app.js"></script>
 </body>
 </html>
