--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <ul id="taskList" class="task-list"></ul>
     </main>
     <footer class="footer">
+      <button onclick="playSound()">?</button>
       <button class="close-btn" onclick="Telegram.WebApp.close()">Close</button>
     </footer>
   </div>
